# robo_clan

patch_bot_Qt/: CMakeLists.txt  dialog.cpp  dialog.h  dialog.ui  djkstra.cpp  djkstra.h  door.cpp  door.h  icon.qrc  image.h  ki_gegner.cpp  ki_gegner.h  ki_gegner_att.h  main.cpp  map.cpp  map.h  patch_bot.cpp  patch_bot.h  presenter.cpp  presenter.h  robot.h  textfile.txt  tile.h  view.ui
patch_bot_Qt/koloniekarten/: Lithium-Stollen 13-A.txt  broken_chars.txt  broken_header_a.txt  broken_header_b.txt  broken_header_c.txt  broken_header_d.txt  broken_header_e.txt  broken_nogoal.txt  broken_nostart.txt  broken_tab.txt  broken_too_few_chars.txt  broken_too_few_lines.txt  broken_too_many_chars.txt  broken_too_many_lines.txt  broken_two_starts.txt  everything.txt  hide_and_seek.txt  hunted.txt  maze.txt  test_bugger.txt  test_follower.txt  test_many_enemies.txt  test_pusher.txt  test_replanning.txt  test_sniffer.txt  textfile.txt  the_longest_yard.txt
